[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Thomas REMY <contact.t.remy777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
structlog = "^23.1.0"
rich = "^13.4.2"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
